# Ordoc-AI---Portfolio

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  ANALISE_COMPLETA_ARQUITETURA.md  ANALISE_COMPLETA_PLATAFORMA.md  ANALISE_GAP_FEATURES_VS_IMPLEMENTACAO.md  ANALISE_MIGRACAO_COMPLETA_2025-12-18.md  CHECKLIST_NAVEGACAO_MODULOS.md  CI_CD_GUIDE.md  CORREÇÃO_ERROS_500.md  IMPLEMENTACAO_INTEGRACOES.md  IMPLEMENTACAO_MODERNIZACAO.md  ITENS_NAO_MIGRADOS.md  LICENSE  MIGRATION_ANALYSIS_REPORT.md  MIGRATION_STATUS_2025-12-05.md  N1_QUERY_ANALYSIS_SUMMARY.md  NOTIFICACOES_INTELLIGENCE_INTEGRADOS.md  ORDOCAIR_MIGRATION_SUMMARY.md  ORDOCCLOUD_MIGRATION_SUMMARY.md  PLANEJAMENTO_SPRINTS_ESTABILIZACAO.md  PRINTER_MIGRATION_ANALYSIS.md  PROBLEMAS_ENCONTRADOS_DOCUMENTOS.md  README.md  REFRESH_TOKEN_CORRIGIDO.md  RESUMO_CORREÇÕES.json  ROADMAP_INOVACOES.md  ROTAS_API_CORRIGIDAS.md  SPRINT_6_SUMMARY.md  TESTES_DETALHADOS.sh  docker-compose.yml  jest-axe.d.ts  jest.config.js  n1_query_analysis_report.json  package-lock.json  package.json  pnpm-lock.yaml  test-integration.sh  test_auth_ordocflow.py  (+5 more)
backend/: .env.example  Dockerfile  README.md  analyze_all_tables.py  audit_ana_silva.py  check_membership.py  check_serializer.py  check_syntax.py  create_clean_legal_user.py  create_department.py  create_test_user.py  debug_alert_viewset.py  debug_cnpj.py  debug_empty_role.py  debug_groups.py  debug_groups_2.py  debug_org.py  debug_policy_create.py  debug_task.py  debug_urls.py  debug_user_create_error.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  fix_ana_data.py  fix_frontend_data.py  fix_membership.py  fix_passwords.py  fix_team_credentials.py  init_ordoc_data.py  manage.py  populate_all_remaining.py  populate_complete_database.py  populate_final_reports.py  populate_group_1.py  populate_production_data.py  populate_schema_fixes.py  populate_signatures_and_logs.py  pyproject.toml  seed_diverse_personas.py  (+10 more)
backend/intelligence/: README.md  __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py
backend/logs/: .gitignore
backend/ordoc_ai/: asgi.py  auth_views.py  authentication.py  base_viewset.py  celery.py  dashboard_views.py  health_views.py  jwt_service.py  password_validator.py  query_optimizations.py  registration_views.py  routing.py  settings.py  settings_test.py  tasks.py  urls.py  wsgi.py
backend/ordoc_air/: apps.py  batch_models.py  batch_serializers.py  batch_services.py  batch_tasks.py  batch_urls.py  batch_views.py  document_auth_actions.py  document_auth_serializers.py  filter_views.py  filters.py  models.py  serializers.py  services.py  tasks.py  test_document_download.py  test_document_status_update.py  test_document_transitions.py  test_document_versions.py  test_permissions.py  tests.py  urls.py  views.py
backend/ordoc_cloud/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/ordoc_flow/: __init__.py  approval_models.py  apps.py  consumers.py  external_views.py  filters.py  models.py  notification_service.py  procedure_models.py  search.py  serializers.py  services.py  signals.py  swagger.py  tasks.py  urls.py  views.py
backend/ordoc_integrations/: IMPLEMENTATION_STATUS.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  README.md  ROADMAP_2026_FEATURES.md  __init__.py  admin.py  apps.py  models.py  (+5 more)
(+5287 files in other folders)
