[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Ordoc-AI Backend - Django REST API for document management and workflow platform"
authors = ["Ricardo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
celery = "^5.5.3"
django-celery-beat = "^2.7.0"
redis = "^6.2.0"
django-storages = "^1.14.6"
boto3 = "^1.39.10"
django-filter = "^25.2"
django-guardian = "^3.0.3"
pytesseract = "^0.3.13"
pypdf2 = "^3.0.1"
django-fsm = "^3.0.0"
djangorestframework-simplejwt = "^5.5.1"
pysolr = "^3.9.0"
drf-spectacular = "^0.27.2"
requests = "^2.31.0"
cryptography = "^45.0.5"
pyotp = "^2.9.0"
# Intelligence module dependencies
gliner2 = "^1.2.0"           # Entity extraction (CPU-friendly)
ollama = "^0.4.0"            # Local LLM client for Council
pyhanko = {extras = ["crypto"], version = "^0.32.0"}
# WebSocket support
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
# Structured logging
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
factory-boy = "^3.3.0"
faker = "^33.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
