[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Ordoc-AI Backend - Django REST API for document management and workflow platform"
authors = ["Ricardo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.7.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
celery = "^5.5.3"
django-celery-beat = "^2.7.0"
redis = "^6.2.0"
django-storages = "^1.14.6"
boto3 = "^1.39.10"
django-filter = "^25.2"
django-guardian = "^3.2.0"
pytesseract = "^0.3.13"
pypdf2 = "^3.0.1"
django-fsm = "^3.0.1"
djangorestframework-simplejwt = "^5.5.1"
pysolr = "^3.9.0"
drf-spectacular = "^0.29.0"
requests = "^2.31.0"
cryptography = "^44.0.0"  # Compatible with pyOpenSSL 24.x
pyotp = "^2.9.0"
# Intelligence module dependencies (Ollama-only for efficiency)
ollama = "^0.4.0"            # Local LLM client for Council and Extraction
pyhanko = {extras = ["crypto"], version = "^0.32.0"}
# XML Signing for NF-e/NFC-e
lxml = "^5.0.0"              # XML processing
signxml = "^4.0.0"           # XML-DSig signatures (Compatible with pyOpenSSL 24+)
pyOpenSSL = "^24.0.0"        # Required by other modules
zeep = "^4.2.1"              # SOAP client for SEFAZ Web Services
# WebSocket support
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
# Structured logging
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
factory-boy = "^3.3.0"
faker = "^33.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
